Service layer improvements